experiences page created

--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "vue-router": "^4.4.0"
   },
   "devDependencies": {
+    "@rollup/rollup-win32-x64-msvc": "^4.52.4",
     "@vitejs/plugin-vue": "^5.2.4",
     "autoprefixer": "^10.4.21",
     "postcss": "^8.4.35",
