--- a/package.json
+++ b/package.json
@@ -9,7 +9,6 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@faker-js/faker": "^8.4.1",
     "@vueuse/core": "^10.11.0",
     "@vueuse/motion": "^2.2.3",
     "gsap": "^3.13.0",
@@ -19,13 +18,22 @@
     "vue-router": "^4.4.0"
   },
   "devDependencies": {
+    "@faker-js/faker": "8.4.1",
     "@rollup/rollup-win32-x64-msvc": "^4.52.4",
+    "@typescript-eslint/eslint-plugin": "^8.46.1",
+    "@typescript-eslint/parser": "^8.46.1",
     "@vitejs/plugin-vue": "^5.2.4",
     "autoprefixer": "^10.4.21",
+    "eslint": "^9.38.0",
+    "eslint-config-prettier": "^10.1.8",
+    "eslint-plugin-prettier": "^5.5.4",
+    "eslint-plugin-vue": "^10.5.1",
     "postcss": "^8.4.35",
+    "prettier": "^3.6.2",
     "tailwindcss": "^3.4.1",
     "typescript": "^5.8.3",
     "vite": "^6.3.5",
+    "vue-eslint-parser": "^10.2.0",
     "vue-tsc": "^2.2.10"
   }
 }
