--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@studio-freight/lenis": "^1.0.27",
     "@vueuse/core": "^10.11.0",
     "@vueuse/motion": "^2.2.3",
     "gsap": "^3.13.0",
@@ -32,6 +33,7 @@
     "postcss": "^8.4.35",
     "prettier": "^3.6.2",
     "tailwindcss": "^3.4.1",
+    "terser": "^5.29.2",
     "typescript": "^5.8.3",
     "vite": "^6.3.5",
     "vue-eslint-parser": "^10.2.0",
