--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "dev": "vite",
     "build": "vue-tsc && vite build",
-    "build:dev": "vite build --mode development",
+    "build:dev": "vite build",
     "preview": "vite preview"
   },
   "dependencies": {
