--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@studio-freight/lenis": "^1.0.27",
     "@vueuse/core": "^10.11.0",
     "@vueuse/motion": "^2.2.3",
+    "defu": "^6.1.4",
     "gsap": "^3.13.0",
     "lenis": "^1.1.6",
     "lucide-vue-next": "^0.408.0",
